--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ small, .text-small {font-size: 0.8rem;}
 .img {
     display: block;
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -170,4 +171,45 @@ p.stat-name {
 footer.attribution {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
+}
+
+/* 
+============================================
+Media Query
+============================================
+*/
+
+@media screen and (min-width: 768px) {
+    
+    .card {
+        display: grid;
+        grid-template-columns: 450px 1fr;
+        max-width: 1500px;
+    }
+
+    .card-img-container {
+        order: 2;
+    }
+    
+
+    .card
+    .card-title {
+        text-align: left;
+        padding: 3rem;
+    }
+    
+    .card-details {
+        margin: 1rem;
+        max-width: 400px;
+    }
+    
+    .card-details p {
+        text-align: left;
+    }
+    .stats-container {
+        display: grid;
+        grid-template-columns:repeat(3, minmax(auto, 120px));
+        justify-content: start;
+
+    }
 }
