--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ Media Query
     
     .card {
         display: grid;
-        grid-template-columns: 450px 1fr;
+        grid-template-columns: 500px 500px;
         max-width: 1500px;
     }
 
